<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="2dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#BA03A9F4"
                android:orientation="vertical"
                android:padding="15dp">

                <TextView
                    android:id="@+id/txt_num_control"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_num_control"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/txt_nombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_nombre"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/txt_pa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_pa"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/txt_sa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_sa"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/txt_edad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_edad"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/txt_semestre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_semestre"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/txt_carrera"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_carrera"
                    android:textColor="@color/black" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FF0000"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_eliminar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FF0707"
                    android:backgroundTint="#FF0707"
                    android:text="Eliminar"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>